# monkeypox

./: .dockerignore  Dockerfile  LICENSE  README.md  case-definitions.json  cdc_latest.csv  data_dictionary.yml  latest.csv  latest.json  monkeypox-template.csv  pyproject.toml  timeseries-confirmed-deprecated.csv  timeseries-confirmed.csv  timeseries-country-confirmed-deprecated.csv  timeseries-country-confirmed.csv  who_latest.csv
.github/workflows/: agency_ingestion_deploy.yml  agency_ingestion_tests.yml  analytics_tests.yml  cdc_who_comparison_tests.yml  comparison-script-deploy.yml  data-script-deploy.yaml  data-script-deploy.yml  data-transfer-s3-to-github.yml  data-transfer_S3->Github.yaml  data-transfer_S3->Github.yml  data_tests.yml  gh_data_update_deploy.yml  gh_data_update_tests.yml  map_timeseries_deploy.yml  map_timeseries_tests.yml  qc.yml  s3_ui_tests.yml  src_tests.yml  tests.yml  timeseries_comparison.yml
analytics/: Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  setup.py  test_run.py
archives/: 2022-05-20 22:14:29.594526.csv  2022-05-20 22:14:29.594526.json  2022-05-21 19:00:47.080195.csv  2022-05-21 19:00:47.080195.json  2022-05-22 01:00:53.707062.csv  2022-05-22 01:00:53.707062.json  2022-05-22 19:00:49.403700.csv  2022-05-22 19:00:49.403700.json  2022-05-23 19:00:42.057848.csv  2022-05-23 19:00:42.057848.json  2022-05-23T01:00:53Z.csv  2022-05-24 01:42:29.183319.json  2022-05-24 20:51:15.333944.csv  2022-05-24 20:51:15.333944.json  2022-05-25 01:00:50.195307.csv  2022-05-25 01:00:50.195307.json  2022-05-25 20:45:01.053909.csv  2022-05-25 20:45:01.053909.json  2022-05-25 21:01:54.947800.csv  2022-05-25 21:01:54.947800.json  2022-05-26 01:01:26.051668.csv  2022-05-26 01:01:26.051668.json  2022-05-26 05:01:59.167355.csv  2022-05-26 05:01:59.167355.json  2022-05-26 09:02:03.611367.csv  2022-05-26 09:02:03.611367.json  2022-05-27 19:09:17.289584.csv  2022-05-27 19:09:17.289584.json  2022-05-28 05:01:41.709624.csv  2022-05-28 05:01:41.709624.json  2022-05-28 09:01:42.832046.csv  2022-05-28 09:01:42.832046.json  2022-05-28 13:01:43.728550.csv  2022-05-28 13:01:43.728550.json  2022-05-28 17:01:40.847313.csv  2022-05-28 21:01:41.452691.json  2022-05-29 05:01:39.470507.csv  2022-05-29 05:01:39.470507.json  2022-05-29 13:01:42.935315.csv  2022-05-29 13:01:42.935315.json  (+239 more)
data/: Dockerfile-lambda  Dockerfile-test  README.md  docker-compose-test.yml  logger.py  pyproject.toml  run.py  setup_localstack.py  test_data.py  test_run.py
data/templates/: folder.html  index.html
ecdc/: ecdc-by-date-of-onset-country.csv
s3_ui/: Dockerfile  Dockerfile-test  docker-compose.yml  logger.py  run.py  setup_localstack.py  test_data.py  test_stack.sh
s3_ui/templates/: index.html
scripts/: Dockerfile  Dockerfile-R  Dockerfile-test  Dockerfile-test-R  README.md
scripts/agency_ingestion/: cdc_stub_request.json  docker-compose-test.yml  docker-compose.yml  ecdc_site.html  ecdc_stub_request.json  pyproject.toml  run.py  run.sh  run_stack.sh  setup.py  test_run.py  who_stub_request.json
scripts/cdc_who_gh_comparison/: docker-compose-test.yml  pyproject.toml  run.py  setup.py  test.sh  test_run.py  who.json
scripts/gh_data_update/: case.py  cdc_data.csv  docker-compose-test.yml  docker-compose.yml  gh_data_template.json  pyproject.toml  run.py  setup.py  test_run.py  who_data.json
scripts/map_timeseries/: docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.py  setup.py  test.sh  test_run.py  who_data.json  who_stub_request.json
scripts/reidentification_risk/: config.json  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run.R  run.py  run.sh  test_run.py
scripts/timeseries_comparison/: comparison.py  docker-compose-test.yml  docker-compose.yml  gh-timeseries.csv  merged-who-gh.csv  pyproject.toml  run.sh  test.sh  test_comparison.py  who-endpoint-response.json  who.csv
src/: app.py  ecdc.py  map_qc.py  qc.py  test_app.py  test_ecdc.py  test_qc.py  test_timeseries.py  timeseries.py  who_timeseries.py
