[tool.poetry]
name = "monkeypox"
version = "0.1.0"
description = ""
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.23.5"
pygsheets = "^2.0.5"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
