[tool.poetry]
name = "monkeypox-data"
version = "0.1.0"
description = ""
authors = ["jim-sheldon <jimisasheldon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.24.39"
Faker = "^13.15.1"
Flask = "^2.1.3"
serverless-wsgi = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
