[tool.poetry]
name = "gh_who_ingestion"
version = "0.1.0"
description = ""
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.69"
requests = "^2.28.1"
bs4 = "^0.0.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
