[tool.poetry]
name = "monkeypox_cdc_who_gh_comparison"
version = "0.1.0"
description = ""
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
pygsheets = "^2.0.5"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
