[tool.poetry]
name = "gh_data_update"
version = "0.1.0"
description = ""
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.24.76"
pymongo = "^4.2.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
