[tool.poetry]
name = "map_timeseries"
version = "0.1.0"
description = "Backend data generation for WHO-based MPX map"
authors = ["Global.health maintainers <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
requests = "^2.28.1"
boto3 = "^1.24.77"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
