[tool.poetry]
name = "monkeypox-reidentification-risk"
version = "0.1.0"
description = ""
authors = ["Global.health team <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.24.36"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
