[tool.poetry]
name = "timeseries_comparison"
version = "0.1.0"
description = "G.h vs WHO MPXV timeseries comparison"
authors = ["Global.health maintainers <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.62"
pandas = "^1.4.3"
pycountry = "^22.3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
